tests/common/snapshots/uimage__common__tests__uimage.rs-14-5_ordered_extractions.snap
---
source: tests/common/mod.rs
assertion_line: 77
expression: ordered_extractions
---
- size: 15664
  success: true
  extractor: uimage_built_in
  do_not_recurse: false
  output_directory: "[output_directory]"
